# rust-journey

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/actions/rust-test/: action.yaml
.github/workflows/: rust.yml
actionkv/: Cargo.toml
actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs  write123.rs
atomics/: Cargo.toml  README.md
atomics/examples/: atomic01.rs  atomic02.rs  atomic03.rs  atomic04.rs  atomic05.rs  atomic07.rs  atomic09.rs  atomic_01.rs
atomics/src/: lib.rs
atomics/src/chapter01/: mod.rs
atomics/src/chapter02/: atomic.rs
atomics/src/chapter03/: acqrel.rs  fence.rs  mod.rs
atomics/src/chapter04/: mod.rs
atomics/src/chapter05/: channel_atomic.rs  channel_convar.rs  channel_state.rs  mod.rs  typesafe.rs  typesaferef.rs  typesaferef_block.rs
atomics/src/chapter06/: arc_basic.rs  arc_optimized.rs  arc_weak.rs  mod.rs
atomics/src/chapter09/: condvar.rs  mod.rs
atomics/src/chapter_01/: locks.rs  mutex.rs  threads.rs
concurrencies/: Cargo.toml
concurrencies/examples/: coerce_echo.rs  coerce_parent_child.rs  ractor_run.rs
concurrencies/src/: lib.rs  ractor_ping.rs
concurrencies/src/async_rt/: block_on.rs  mod.rs  reactor.rs
concurrencies/src/coerces/: coerce_timer.rs  mod.rs  parent_child.rs
data/: data-example.csv
dioxus-todo/: Cargo.toml  Dioxus.toml
dioxus-todo/docs/assets/dioxus/: todo_app.js  todo_app_bg.wasm
dioxus-todo/docs/assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
dioxus-todo/src/: lib.rs  main.rs
effective/: Cargo.toml
effective/examples/: applicative_parsing_generic.rs  applicative_parsing_result.rs  applicative_parsing_string.rs  binary_search.rs  builder_pattern.rs  dci2_exe.rs  dci_bank.rs  dci_exe.rs  download_file.rs  enum_str.rs  env_bin.rs  function_compare.rs  functional1.rs  get_files.rs  hash_file.rs  hex.rs  log_itertool.rs  read_csv.rs  read_image.rs  tcp_server.rs
effective/src/: binary_search.rs  builder_pattern.rs  dci.rs  dci2.rs  download_file.rs  enum_str.rs  env.rs  get_files.rs  hash_file.rs  lib.rs  read_csv.rs  read_image_dimension.rs  tcp_server.rs
effective/src/dci_bank/: context.rs  data.rs  display.rs  mod.rs  role.rs
effective/src/log/: mod.rs  model.rs  read_log.rs
jsonrpc/: Cargo.toml
jsonrpc/src/: lib.rs  main.rs  response.rs  server.rs
lunatics/: Cargo.toml
lunatics/.cargo/: config.toml
lunatics/src/: distributed.rs  lib.rs  main.rs  model.rs  req_resp.rs
macros-builder/: Cargo.toml
macros-builder/examples/: command.rs
macros-builder/src/: builder.rs  lib.rs
macrox/: Cargo.toml
macrox/examples/: function_like.rs  generate.rs  littebook.rs
macrox/fixtures/: person.json  person1.json  person2.json
macrox/src/: json_schema.rs  lib.rs
macrox/templates/: code.j2
mget/: Cargo.toml
mget/src/: dns.rs  ethernet.rs  http.rs  main.rs
pokedex/: Cargo.toml
pokedex/src/: error.rs  lib.rs  main.rs
pokedex/src/api/: create_pokemon.rs  delete_pokemon.rs  fetch_all_pokemons.rs  fetch_pokemon.rs  health.rs  mod.rs
pokedex/src/cli/: create_pokemon.rs  mod.rs
pokedex/src/domain/: create_pokemon.rs  delete_pokemon.rs  entities.rs  fetch_all_pokemons.rs  fetch_pokemon.rs
pokedex/src/repositories/: pokemon.rs
qcheck/: Cargo.toml
qcheck/src/domain/: mod.rs  subscriber_email.rs
rustinaction/: Cargo.toml
rustinaction/examples/: di.rs  other.rs  parser.rs  type_system1.rs  type_system2.rs
rustinaction/src/: calendar.rs  lib.rs  main.rs  notifier.rs
rustinaction/src/ch07/: fview.rs  mod.rs  serde.rs
rustinaction/src/other/: calendar.rs  event.rs  mod.rs  notifier.rs
rustinaction/src/parser/: evaluate.rs  lexer.rs  mod.rs  parser.rs  token.rs
rustinaction/src/typestate/: adt.rs  mod.rs
rustinaction/tests/: fview.rs  other.rs
thumbor/: Cargo.toml  build.rs
thumbor/protos/: abi.proto
thumbor/src/: lib.rs  main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
token_price/: Cargo.toml
token_price/src/: main.rs
