[package]
name = "rust-journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [  
    "actionkv",
    "concurrencies",
    "effective",
    "mget",
    "rustinaction",
    "thumbor",
    "token_price",
]



[workspace.dependencies]
anyhow = "1"
async-trait = "0"
axum = "0.6"
base64 = "0"
bincode = "1"
byteorder = "1.4"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crc = "3"
futures = "0.3"
image = "0"
lazy_static = "1"
lru = "0"
percent-encoding = "2"
photon-rs = "0"
prost = "0"
prost-build = "0"
ractor = "0.7"
ractor_cluster = "0.7"
rand = "0.8"
reqwest = { version = "0", features = ["json", "rustls-tls"] }
serde = {version  = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
serde_derive = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"]}
tower-http = { version = "0", features = ["add-extension", "compression-full", "trace"]}
tracing = "0.1"
tracing-subscriber = "0"
url = "2.3"





