[package]
name = "rust-journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [  
    "actionkv",
    "concurrencies",
    "effective",
    "jsonrpc",
    "mget",
    "rustinaction",
    "thumbor",
    "token_price",
]



[workspace.dependencies]
anyhow = "1"
async-trait = "0"
axum = "0.6"
base64 = "0.13"
bincode = "1"
byteorder = "1.4"
bytes = "1" 
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
coerce = { version = "0.8", features = ["full"] }
coerce-macros = "0.2"
crc = "3"
csv = "1.2"
futures = "0.3"
hex-literal = "0.4"
hmac = "0.12"
hashring = "0.3"
image = "0.23"
jsonrpsee = { version = "0.16", features = ["full"] }
# jsonrpsee-core = "0.9.0"
jwt = "0.16"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
lru = "0"
percent-encoding = "2"
parking_lot = "0.12"
photon-rs = "0.3"
prost = "0"
prost-build = "0"
protobuf = "3.2"
ractor = "0.7"
ractor_cluster = "0.7"
rand = "0.8"
reqwest = { version = "0", features = ["json", "rustls-tls"] }
serde = {version  = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
serde_derive = "1"
sha2 = "0.10"
simplelog = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"]}
tower-http = { version = "0", features = ["add-extension", "compression-full", "trace"]}
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"


[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { features = ["json"], version = "0.3" }

[profile.dev]
debug = 1




