[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
crc = "1"
serde = "1.0.152"
serde_derive = "1.0.152"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "write123"
path = "src/write123.rs"
