[package]
name = "concurrencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
ractor = { workspace = true }
ractor_cluster = { workspace = true }
tokio = { workspace = true }

