[package]
name = "concurrencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
coerce = { workspace = true }
# coerce-macros = { workspace = true }
# coerce = { version = "0", features = ["full"] }
coerce-macros = "0.2"
ractor = { workspace = true }
ractor_cluster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
