[package]
name = "concurrencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
coerce = { workspace = true }
# coerce-macros = { workspace = true }
# coerce = { version = "0", features = ["full"] }
coerce-macros = "0.2"
ractor = { workspace = true }
ractor_cluster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

async-task = "4.7.0"
flume = "0.11.0"
futures = "0.3.30"
parking = "2.2.0"
parking_lot = "0.12.1"
polling = "3.6.0"
rustix = "0.38.32"
slab = "0.4.9"
waker-fn = "1.1.1"