[package]
name = "effective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
