[package]
name = "macrox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
askama = "0.12"
heck = "0.4"
litrs = "0.4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
