[package]
name = "rustinaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "type_system1"
path = "examples/type_system1.rs"

[dependencies]
bincode = "1"
# cbor = "0.4"
serde = {version  = "1", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1"
