[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true } # web 服务器
anyhow = { workspace = true } # 错误处理
base64 = { workspace = true } # base64 编码/解码
bytes = { workspace = true } # 处理字节流
image = { workspace = true } # 处理图片
lazy_static = { workspace = true } # 通过宏更方便地初始化静态变量
lru = { workspace = true } # LRU 缓存
percent-encoding = { workspace = true } # url 编码/解码
photon-rs = { workspace = true } # 图片效果
prost = { workspace = true } # protobuf 处理
reqwest = { workspace = true } # HTTP 客户端
serde = { workspace = true } # 序列化/反序列化数据
tokio = { workspace = true } # 异步处理
tower = { workspace = true } # 服务处理及中间件
tower-http = { workspace = true } # http 中间件
tracing = { workspace = true } # 日志和追踪
tracing-subscriber = { workspace = true } # 日志和追踪

[build-dependencies]
prost-build = { workspace = true }