[package]
name = "token_price"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0", features = ["json"] }
serde_json = "1"
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
